# ongi-device

./: .gitignore  AGENTS.md  CMakeLists.txt  sdkconfig
.agents/skills/: docs-conventions.md  esp-firmware-skill.md  ongi-skills.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: ci.yml
components/storage/: CMakeLists.txt
components/storage/include/: storage_nvs.h
components/wifi/: CMakeLists.txt  http_config_example.h  wifi_config_example.h  wifi_heartbeat.c
docs/: error-handling.md
main/: CMakeLists.txt  main.c  storage_nvs.c  storage_nvs.h  wifi_config_example.h  wifi_heartbeat.c  wifi_heartbeat.h
